--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@covalent/core": "^1.0.0",
+    "@covalent/dynamic-forms": "^1.0.0",
+    "@covalent/highlight": "^1.0.0",
+    "@covalent/http": "^1.0.0",
+    "@covalent/markdown": "^1.0.0",
     "@types/jquery": "^3.3.1",
     "angular4-fusioncharts": "^1.0.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "fusioncharts": "^3.12.2",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "ng2-dnd": "^5.0.2",
     "ngx-bootstrap": "^2.0.3",
@@ -38,6 +44,7 @@
     "@angular/cli": "~1.7.3",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@types/hammerjs": "^2.0.35",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
