--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@covalent/highlight": "^1.0.0",
     "@covalent/http": "^1.0.0",
     "@covalent/markdown": "^1.0.0",
+    "@types/file-saver": "^1.3.0",
     "@types/jquery": "^3.3.1",
     "angular4-fusioncharts": "^1.0.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "file-saver": "^1.3.8",
     "fusioncharts": "^3.12.2",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
