--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@covalent/markdown": "^1.0.0",
     "@types/file-saver": "^1.3.0",
     "@types/jquery": "^3.3.1",
+    "angular2-image-upload": "^1.0.0-rc.1",
     "angular4-fusioncharts": "^1.0.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
@@ -39,6 +40,7 @@
     "jquery": "^3.3.1",
     "ng2-dnd": "^5.0.2",
     "ngx-bootstrap": "^2.0.3",
+    "ngx-color-picker": "^5.3.8",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
